# crab

./: .env  README.md  docker-compose.yml
api/: pyproject.toml  test.py
api/app/: client.js
api/app/api/: database.py  main.py  settings.py
api/app/static/: client.js
api/app/static/icons/styles/: base.css
api/app/static/libraries/prism/: prism.css  prism.js
api/app/static/styles/: base.css
api/app/templates/: base.html  core.html
api/app/templates/components/: editor.html  success_error.html
api/app/templates/pages/: index.html
