[tool.poetry]
name = "crab_api"
version = "0.1.0"
description = "CRUD API"
authors = ["Freddy Wordingham"]

[tool.poetry.dependencies]
fastapi = "^0.78.0"
fastapi-login = "^1.8.2"
pymongo = "^4.2.0"
python = "^3.8"
python-multipart = "^0.0.5"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
